# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Linter & Test.yml  README.md
task_manager/task_manager/: settings.py
