[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "it's task_manager"
authors = ["mrJonson <mr.Jonson@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
heroku = "^0.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
